--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,4 @@ asyncpg = "^0.30.0"
 alembic = "^1.14.1"
 orjson = "^3.10.15"
 alembic-postgresql-enum = "^1.6.0"
+python-dateutil = "^2.9.0.post0"
