--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ authors = [{ name = "Dmitry Pushkin" }]
 requires-python = "~=3.12"
 readme = "README.md"
 dependencies = [
-    "python-telegram-bot~=21.10",
     "pydantic>=2.10.6,<3",
     "pydantic-settings>=2.7.1,<3",
     "sqlalchemy[asyncio]>=2.0.37,<3",
@@ -16,6 +15,8 @@ dependencies = [
     "alembic-postgresql-enum>=1.6.0,<2",
     "python-dateutil>=2.9.0.post0,<3",
     "pytz>=2025.1",
+    "python-telegram-bot[job-queue]>=22.0",
+    "redis>=5.2.1",
 ]
 
 [tool.uv]
