--- a/compose.yml
+++ b/compose.yml
@@ -6,7 +6,10 @@ services:
       POSTGRES_USER: ${DATABASE__POSTGRES_USER}
       POSTGRES_PASSWORD: ${DATABASE__POSTGRES_PASSWORD}
       PGDATA: "/var/lib/postgresql/data/pgdata"
+      TZ: "Europe/Moscow"
     env_file: .env
+    # ports:
+    #   - "5432:5432"
     restart: "unless-stopped"
     volumes:
       - tg-assistan-data:/var/lib/postgresql/data
@@ -15,6 +18,14 @@ services:
         limits:
           cpus: '1'
           memory: 4G
+  # redis:
+  #   image: redis:7.4.2-alpine3.21
+  #   restart: "unless-stopped"
+  #   ports:
+  #     - '6379:6379'
+  #   command: redis-server --save 20 1 --loglevel warning
+  #   volumes: 
+  #     - redis-data:/data
 
   tg_assisnant:
     build: .
@@ -26,3 +37,4 @@ services:
 
 volumes:
   tg-assistan-data:
+  # redis-data:
