--- a/compose.yml
+++ b/compose.yml
@@ -8,8 +8,6 @@ services:
       PGDATA: "/var/lib/postgresql/data/pgdata"
       TZ: "Europe/Moscow"
     env_file: .env
-    # ports:
-    #   - "5432:5432"
     restart: "unless-stopped"
     volumes:
       - tg-assistan-data:/var/lib/postgresql/data
@@ -18,17 +16,25 @@ services:
         limits:
           cpus: '1'
           memory: 4G
-  # redis:
-  #   image: redis:7.4.2-alpine3.21
-  #   restart: "unless-stopped"
-  #   ports:
-  #     - '6379:6379'
-  #   command: redis-server --save 20 1 --loglevel warning
-  #   volumes: 
-  #     - redis-data:/data
+
+  redis:
+    image: redis:7.4.2-alpine3.21
+    restart: "unless-stopped"
+    volumes: 
+      - redis-data:/data
+
+  reminder:
+    build: 
+      dockerfile: scheduler.dockerfile
+    command: sh ./schedule_entrypoint.sh
+    env_file: .env
+    depends_on:
+      - redis
+    restart: "unless-stopped"
 
   tg_assisnant:
-    build: .
+    build: 
+      dockerfile: bot.dockerfile
     command: sh ./entrypoint.sh
     env_file: .env
     depends_on:
@@ -37,4 +43,4 @@ services:
 
 volumes:
   tg-assistan-data:
-  # redis-data:
+  redis-data:
