--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ dependencies = [
     "alembic-postgresql-enum>=1.6.0,<2",
     "python-dateutil>=2.9.0.post0,<3",
     "pytz>=2025.1",
-    "python-telegram-bot[job-queue]>=22.0",
-    "redis>=5.2.1",
+    "python-telegram-bot>=22.0",
+    "arq>=0.26.3",
 ]
 
 [tool.uv]
